[project]
name = "natalielova-job-hunter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aio-pika>=9.4.0",
    "aiogram>=3.20.0.post0",
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "json-log-formatter>=1.1.1",
    "openai>=1.78.1",
    "playwright>=1.52.0",
    "psycopg2-binary>=2.9.10",
    "psycopg[binary]>=3.2.8",
    "pyrogram>=2.0.106",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.40",
]
